--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/awsm.css@3.0.4/dist/awsm_theme_pearl-lusta.min.css">
 	<script type="text/javascript">block_aplayer = true;</script>
 	<script src="https://cdn.yimian.xyz/ushio-js/ushio-head.min.js"></script>
-    <script>page.auth = ['any'];</script>
+    <script>//page.auth = ['any'];</script>
 </head>
 <body>
 	<header>
