--- a/index.html
+++ b/index.html
@@ -4,19 +4,20 @@
 	<meta charset="UTF-8">
 	<title>ACG WATCH</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/awsm.css@3.0.4/dist/awsm_theme_pearl-lusta.min.css">
-	<script type="text/javascript">block_aplayer = true;</script>
+	<script type="text/javascript">block_aplayer = true;lang = ['zh', 'en'];</script>
 	<script src="https://cdn.yimian.xyz/ushio-js/ushio-head.min.js"></script>
+	<script type="text/javascript">page.proj = 'iotcat/acg.watch';</script>
     <script>//page.auth = ['any'];</script>
 </head>
 <body>
 	<header>
 		<h1>ACG.WATCH</h1>
-		<p>Watch ACG video <abbr title="At ACG.WATCH">ONLINE</abbr></p>
+		<p><span class=".zh"><abbr title="在 ACG.WATCH">在线</abbr>观看经典番剧</span><span class=".en">Watch ACG video <abbr title="At ACG.WATCH">ONLINE</abbr></span></p>
 		<nav>
 			<ul>
-				<li><a href="./" aria-hidden="false">Homepage</a></li>
-				<li><a href="./">Playlist</a></li>
-				<li><a href="https://iotcat.me/">About Me</a></li>
+				<li><a href="./" aria-hidden="false"><span class=".zh">主页</span><span class=".en">Homepage</span></a></li>
+				<li><a href="./"><span class=".zh">列表</span><span class=".en">Playlist</span></a></li>
+				<li><a href="https://iotcat.me/"><span class=".zh">关于我</span><span class=".en">About Me</span></a></li>
 			</ul>
 		</nav>
 	</header>
@@ -31,14 +32,14 @@
 					</p>
 					<p>
 						<strong>R.L.</strong>
-						<a href="#" onClick="reload()">Reload Cache</a>
+						<a href="#" onClick="reload()"><span class=".zh">重载缓存</span><span class=".en">Reload Cache</span></a>
 					</p>
 				</aside>
 			</section>
 		</article>
 	</main>
     <footer>
-    	<p style="text-align: center;"> Powered By Ushio | Made with love by <a href="https://iotcat.me">iotcat</a> </p>
+    	<p style="text-align: center;"> Powered By <a href="https://ushio.cool/">Ushio</a> | Made with love by <a href="https://iotcat.me">iotcat</a> </p>
     	<br>
     </footer>
 	<script src="https://cdn.yimian.xyz/ushio-js/ushio-footer.min.js"></script>
