--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					<p>
 						<strong>S.F.</strong>
                         <span id="last_watch"><span>
-                        <script>session.onload(function(){if(session.get('acg/last_watch'))$('#last_watch').html('<a href="https://acg.watch/player/?url='+session.get('acg/last_watch')+'">Continue Your Last Watch</a>');});</script>
+                        <script>session.onload(function(){if(session.get('acg/last_watch'))$('#last_watch').html('<a href="https://acg.watch/player/?url='+session.get('acg/last_watch')+'">'+((page.tran.getLang() == 'zh')?'继续上次观看':'Continue Your Last Watch')+'</a>');});</script>
 					</p>
 					<p>
 						<strong>R.L.</strong>
