--- a/index.html
+++ b/index.html
@@ -12,19 +12,18 @@
 <body>
 	<header>
 		<h1>ACG.WATCH</h1>
-		<p><span class=".zh"><abbr title="在 ACG.WATCH">在线</abbr>观看经典番剧</span><span class=".en">Watch ACG video <abbr title="At ACG.WATCH">ONLINE</abbr></span></p>
+		<p><span class=".zh"><abbr title="在 ACG.WATCH">让ACG视频无国界</abbr></span><span class=".en">Free ACG Video<abbr title="At ACG.WATCH"></abbr></span></p>
 		<nav>
 			<ul>
 				<li><a href="./" aria-hidden="false"><span class=".zh">主页</span><span class=".en">Homepage</span></a></li>
 				<li><a href="./list.html"><span class=".zh">列表</span><span class=".en">Playlist</span></a></li>
-				<li><a href="https://iotcat.me/"><span class=".zh">关于我</span><span class=".en">About Me</span></a></li>
+				<li><a href="https://iotcat.me/"><span class=".zh">关于作者</span><span class=".en">About Me</span></a></li>
 			</ul>
 		</nav>
 	</header>
 	<main>
 		<article id="content">
 			<section>
-				<aside>
 					<p>
 						<strong>S.F.</strong>
                         <span id="last_watch"><span>
@@ -32,9 +31,8 @@
 					</p>
 					<p>
                             <strong>R.L.</strong> <span class=".zh">从链接播放视频</span><span class=".en">Play video form URL</span>
-                            <p><input type="text" id="url"><button onClick="window.location.href='/player/?url='+$('#url').val()"><span class=".zh">播放</span><span class=".en">Play</span></button></p>
+                            <p><input type="text" id="url" placeholder="https://xxx.xxxx.xxx/xxx/xxx.mp4"><button onClick="window.location.href='/player/?url='+$('#url').val()"><span class=".zh">播放</span><span class=".en">Play</span></button></p>
 					</p>
-				</aside>
 			</section>
 		</article>
 	</main>
