--- a/list.html
+++ b/list.html
@@ -12,12 +12,12 @@
 <body>
 	<header>
 		<h1>ACG.WATCH</h1>
-		<p><span class=".zh"><abbr title="在 ACG.WATCH">在线</abbr>观看经典番剧</span><span class=".en">Watch ACG video <abbr title="At ACG.WATCH">ONLINE</abbr></span></p>
+		<p><span class=".zh"><abbr title="在 ACG.WATCH">在线</abbr>观看IoTcat的收藏</span><span class=".en">Watch ACG video <abbr title="At ACG.WATCH">ONLINE</abbr></span></p>
 		<nav>
 			<ul>
 				<li><a href="./" aria-hidden="false"><span class=".zh">主页</span><span class=".en">Homepage</span></a></li>
 				<li><a href="./list.html"><span class=".zh">列表</span><span class=".en">Playlist</span></a></li>
-				<li><a href="https://iotcat.me/"><span class=".zh">关于我</span><span class=".en">About Me</span></a></li>
+				<li><a href="https://iotcat.me/"><span class=".zh">关于作者</span><span class=".en">About Me</span></a></li>
 			</ul>
 		</nav>
 	</header>
