--- a/list.html
+++ b/list.html
@@ -35,7 +35,7 @@
 		</article>
 	</main>
     <footer>
-    	<p style="text-align: center;"> Powered By <a href="https://ushio.cool/">Ushio</a> | Made with love by <a href="https://iotcat.me">iotcat</a> </p>
+    	<p style="text-align: center;"> Powered By <a href="https://ushio.yimian.xyz/">Ushio</a> | Made with love by <a href="https://iotcat.me">iotcat</a> </p>
     	<br>
     </footer>
 	<script src="https://cdn.yimian.xyz/ushio-js/ushio-footer.min.js"></script>
